# ePaper_Raspberry_Pi_Weather

./: .gitignore  README.md  pyproject.toml
deploy/: weather-epaper.service
scripts/: deploy.sh  install-service.sh  run-service.sh
src/weather_epaper/: __init__.py  __main__.py  config.py  device.py  icons.py  input_hat.py  main.py  render.py  weather_client.py  weather_history.py
src/weather_epaper/ui/: __init__.py  navigation.py  screens.py
