[project]
name = "weather-epaper"
version = "0.1.0"
description = "Weather display for Waveshare 2.7\" e-paper on Raspberry Pi"
requires-python = ">=3.14"
dependencies = [
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "fonticon-materialdesignicons6>=6.9.96",
]

[project.optional-dependencies]
pi = [
    "spidev>=3.5",
    "gpiozero>=2.0",
    "lgpio>=0.2.0",
]

[project.scripts]
weather-epaper = "weather_epaper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/weather_epaper", "third_party/waveshare"]

[tool.hatch.build.targets.wheel.sources]
"src/weather_epaper" = "weather_epaper"
"third_party/waveshare" = "waveshare"

[tool.hatch.build.targets.sdist]
include = ["src/weather_epaper", "third_party/waveshare", "pyproject.toml"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "third_party"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["weather_epaper", "waveshare"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["waveshare.*", "fonticon_mdi6.*"]
ignore_missing_imports = true
